--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "deploy": "npm run build && mv build/index.html build/200.html && surge build ibraheem-portfolio.surge.sh",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
